--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/martijnpoppen/com.synology"
   },
   "dependencies": {
-    "wake_on_lan": "0.0.4", 
     "got": "^11.8.2",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "wake_on_lan": "0.0.4"
   }
 }
