--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
   "id": "com.synology",
-  "version": "1.1.0",
+  "version": "1.1.3",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "brandColor": "#000000",
   "name": {
     "en": "Synology",
-    "nl": "Synology"
+    "nl": "Synology",
+    "de": "Synology"
   },
   "description": {
     "en": "The next step in data storage starts here",
