--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.synology",
-  "version": "1.1.4",
+  "version": "1.1.6",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "brandColor": "#000000",
@@ -52,11 +52,11 @@
     }
   },
   "bugs": {
-    "url": "https://community.athom.com/t/app-eufy-home/46610/"
+    "url": "https://community.athom.com/t/app-synology-diskstation/49744"
   },
-  "source": "https://github.com/martijnpoppen/com.eufylife.home",
-  "homeyCommunityTopicId": 46610,
-  "support": "https://community.athom.com/t/app-eufy-home/46610/",
+  "source": "https://github.com/martijnpoppen/com.synology",
+  "homeyCommunityTopicId": 49744,
+  "support": "https://community.athom.com/t/app-synology-diskstation/49744",
   "discovery": {
     "diskstation_discovery": {
       "type": "mdns-sd",
