--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.synology",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "brandColor": "#000000",
@@ -71,7 +71,10 @@
     {
       "id": "DiskStation",
       "class": "homealarm",
-      "connectivity": ["lan", "cloud"],
+      "connectivity": [
+        "lan",
+        "cloud"
+      ],
       "capabilities": [
         "onoff",
         "action_reboot",
@@ -191,17 +194,17 @@
           "de": "Neustarten"
         },
         "titleFormatted": {
-            "en": "[[device]] Reboot",
-            "nl": "[[device]] Herstarten",
-            "de": "[[device]] Neustarten"
-          },
+          "en": "[[device]] Reboot",
+          "nl": "[[device]] Herstarten",
+          "de": "[[device]] Neustarten"
+        },
         "args": [
-            {
-              "type": "device",
-              "name": "device",
-              "filter": "capabilities=action_reboot"
-            }
-          ]
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "capabilities=action_reboot"
+          }
+        ]
       }
     ]
   },
@@ -354,15 +357,15 @@
       }
     },
     "action_reboot": {
-        "type": "boolean",
-        "title": {
-          "en": "Reboot",
-          "nl": "Herstarten",
-          "de": "Neustarten"
-        },
-        "getable": false,
-        "setable": true,
-        "uiComponent": "button"
-      }
+      "type": "boolean",
+      "title": {
+        "en": "Reboot",
+        "nl": "Herstarten",
+        "de": "Neustarten"
+      },
+      "getable": false,
+      "setable": true,
+      "uiComponent": "button"
+    }
   }
 }
