--- a/app.json
+++ b/app.json
@@ -123,7 +123,7 @@
           "label": {
             "en": "General settings",
             "nl": "Algemene instellingen",
-            "de": "Allgemeine einstellungen"
+            "de": "Allgemeine Einstellungen"
           },
           "children": [
             {
@@ -132,7 +132,7 @@
               "label": {
                 "en": "Always on",
                 "nl": "Altijd aan",
-                "de": "Immer auf"
+                "de": "Immer an"
               },
               "value": false
             }
@@ -143,7 +143,7 @@
           "label": {
             "en": "Login settings",
             "nl": "Login instellingen",
-            "de": "Login einstellungen"
+            "de": "Login Einstellungen"
           },
           "children": [
             {
